force-app/main/default/objects/Engagement__c/fields/Engagement_Date__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Date__c</fullName>
    <description>Date touch point with customer happened</description>
    <label>Engagement Date</label>
    <type>Date</type>
</CustomField>