force-app/main/default/objects/Engagement__c/fields/Engagement_Status__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status__c</fullName>
    <label>Engagement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Planned</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Canceled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>