force-app/main/default/objects/Engagement__c/fields/Engagement_Type__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Type__c</fullName>
    <description>Type of touch point with customer</description>
    <label>Engagement Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Meeting</fullName>
            </value>
            <value>
                <fullName>Training</fullName>
            </value>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>QBR</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Incident Support</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>